# TAMC

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md
experiments/: benchmark_regime_control.py  benchmark_shift_types.py  dynamical_forecast_adaptation.py  logistic_map_shift.py  lorenz_shift.py  paper_figures.py  real_data_controlled_shift.py  runtime_benchmark.py  synthetic_regime_shift.ipynb  synthetic_regime_shift.py  tamc_lite_synthetic_forecast.py  topology_ablation.py
figures/: README.md
paper_draft/: README.md  tamc_workshop_draft.md
paper_notes/: introduction.md  methodology.md  problem_statement.md  related_work.md  research_biref.md  research_brief.md
src/: adapters.py  delay_embedding.py  drift_gates.py  evaluation.py  forecasting.py  regime_similarity.py  tamc_pipeline.py  tamic_signal.py  topology_metrics.py
tests/: test_adapters.py  test_benchmark_shift_types.py  test_delay_embedding.py  test_drift_gates.py  test_dynamical_forecast_adaptation.py  test_evaluation.py  test_forecasting.py  test_real_data_controlled_shift.py  test_regime_similarity.py  test_tamc_pipeline.py  test_topology_metrics.py
