[project]
name = "tamic"
version = "0.1.0"
description = "Topological Attractor Meta-Control for forward-only test-time adaptation in non-stationary time-series forecasting."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Rishabh Sharma" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "networkx>=3.2",
  "gudhi>=3.10",
  "ripser>=0.6",
  "persim>=0.3",
  "statsmodels>=0.14",
  "ruptures>=1.1",
  "tqdm>=4.66",
  "torch>=2.3",
  "jupyter>=1.0",
  "ipykernel>=6.29",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "black>=24.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]